traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:14: error: ')' expected but symbol literal found.
  do{ecritMessage('mark':string)
                       ^